# RNDXTST

./: pyproject.toml
module1/: pyproject.toml
module1/controllers/: damage.py  movement.py
module1/globals/: hp_checks.py
module1/models/: mage.py  warriors.py
module1/scenes/: loader.py
module2/: __init__.py  pyproject.toml
module2/api/: routes.py
module2/db/: connector.py  retriever.py
module2/model/: data.py  dto.py
