[project]
name = "pizza_and_warriors"

dependencies = [
    "asyncio>=3.4.3",
    "python-dotenv>=1.0.1",
    "chardet>=5.2.0",
    "fastapi[standard]>=0.115.2",
    "pydantic-settings>=2.5.2",
    "uvicorn>=0.31.1",
    "neo4j-dao",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "python-parser",
]
